--- a/frontend/usvn/web/usvn/css/custom.scss
+++ b/frontend/usvn/web/usvn/css/custom.scss
@@ -12,6 +12,12 @@ html, body {
   }
 }
 
+.site-footer-social {
+  a, i {
+    color: white;
+  }
+}
+
 .service__icon {
   overflow: hidden;
   max-height: 260px;
