--- a/frontend/janami/web/css/pink-theme.css
+++ b/frontend/janami/web/css/pink-theme.css
@@ -5270,7 +5270,7 @@ p.foo-email a {
 }
 
 #terms-page.page-hero-section {
-  background-image: url(../images/terms-page.jpg);
+  background-image: url(../img/about/contact.png);
 }
 
 /*------------------------------------------*/
