--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -474,9 +474,12 @@ nav a {
         margin: 0;
         font-size: 16px; }
     .other-product .block-product .img {
+      min-height: 365px;
       height: 100%;
       width: 100%;
-      position: relative; }
+      position: relative;
+      display: -moz-inline-box;
+      display: -webkit-box; }
       .other-product .block-product .img img {
         display: flex;
         object-fit: cover; }
