--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -773,9 +773,12 @@ nav {
     }
 
     .img {
+      min-height: 365px;
       height: 100%;
       width: 100%;
       position: relative;
+      display: -moz-inline-box;
+      display: -webkit-box;
 
       img {
         display: flex;
