--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -511,6 +511,12 @@ nav a {
             font-weight: bold; }
 
 @media (max-width: 467px) {
+  .content-text {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 20px;
+    width: 100%; }
+
   #banner-bottom {
     margin-bottom: 0 !important;
     padding-left: 0 !important; }
