--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -832,8 +832,8 @@ nav {
       width: 100%;
 
       &.margin-left, &.margin-right {
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
       }
     }
   }
