--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap');
+@font-face {
+  font-family: RedRose;
+  src: url('../fonts/RedRose.ttf') format('ttf');
+  font-display: fallback;
+}
 
 $icon-color: #636363;
 $active-color: #E44126;
@@ -79,7 +82,7 @@ $txt-color: #636363;
 }
 
 .tra-header {
-  font-family: 'Charmonman', cursive !important;
+  font-family: RedRose, serif !important;
   color: $bg-green;
 }
 
@@ -173,12 +176,40 @@ $txt-color: #636363;
 
 
 html, body, a, p, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Baloo Da 2', cursive;
+  font-family: RedRose, sans-serif !important;
 }
 
 nav {
   a {
     font-weight: 600;
+  }
+}
+
+#footer-1 {
+  padding-top: 50px;
+}
+
+.breadcrumb {
+  li {
+    &.active {
+      font-size: 14px;
+      font-weight: bold;
+    }
+
+    a {
+      font-size: 14px;
+    }
+  }
+}
+
+.divider {
+  text-align: center;
+  margin: auto;
+  height: 4px;
+  background-color: $color-red;
+
+  &.w-50px {
+    width: 50px;
   }
 }
 
