--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -199,6 +199,7 @@ nav {
   }
 }
 
+
 #footer-1 {
   padding-top: 50px;
 }
@@ -576,8 +577,48 @@ nav {
   }
 }
 
+.banner-carousel {
+  .owl-nav {
+    position: absolute;
+    width: fit-content;
+    top: 0;
+    right: 0;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+  }
+}
+
 #blog-1 {
   padding-top: 150px;
+
+  .post-carousel {
+    .owl-nav {
+      position: absolute;
+      width: fit-content;
+      top: -60px;
+      right: 0;
+      display: flex;
+
+      [class*="owl-"] {
+        width: 35px;
+        height: 35px;
+        background: transparent;
+        border-radius: 100%;
+        border: 1px solid $color-red;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $color-red;
+
+        &:hover {
+          background-color: $color-red;
+          color: white;
+        }
+      }
+    }
+  }
 }
 
 .xam {
