--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -94,6 +94,9 @@
 html, body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Red Rose', cursive; }
 
+.footer-links h6 {
+  font-family: arial, sans-serif; }
+
 a, b, strong, p, span, small {
   font-family: arial, sans-serif; }
 
