--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -749,7 +749,7 @@ nav {
 .contact-bg {
   padding-bottom: 40px;
   margin-top: 80px;
-  background-image: url('../img/about/contact.png');
+  background-image: url('../img/bg/contact.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 100px;
