--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -451,7 +451,7 @@ nav a {
 .contact-bg {
   padding-bottom: 40px;
   margin-top: 80px;
-  background-image: url("../img/about/contact.png");
+  background-image: url("../img/bg/contact.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 100px; }
