--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -175,7 +175,7 @@ html, body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Red Rose', cursive;
 }
 
-.footer-links {
+.footer {
   h6 {
     font-family: arial, sans-serif;
   }
